# VibeCode

./: .gitignore  AGENTS.md  output-flow-page.html
.agent/: AGENT.md  (+3 more)
EtsyResearchMVP/backend/: README.md  alembic.ini  pyproject.toml
EtsyResearchMVP/backend/alembic/: env.py
EtsyResearchMVP/backend/alembic/versions/: 0001_initial.py
EtsyResearchMVP/backend/app/: __init__.py  main.py
EtsyResearchMVP/backend/app/core/: __init__.py  config.py  logging.py  security.py
EtsyResearchMVP/backend/app/db/: __init__.py  base.py  models.py  session.py
EtsyResearchMVP/backend/app/modules/audits/: __init__.py  service.py
EtsyResearchMVP/backend/tests/: conftest.py  test_api.py  test_audit_service.py
clipart_ops/: .env.example  .gitignore  README.md  pyproject.toml
clipart_ops/.clipart_ops_state_smoke/: settings.sqlite3
clipart_ops/src/clipart_ops/: __init__.py  main.py
clipart_ops/src/clipart_ops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
clipart_ops/src/clipart_ops/app/: __init__.py  bootstrap.py  env_loader.py
clipart_ops/src/clipart_ops/data/: __init__.py  settings_store.py
clipart_ops/src/clipart_ops/domain/: __init__.py  models.py
clipart_ops/src/clipart_ops/services/: __init__.py  bundle_service.py  drive_service.py  metadata_service.py  pinterest_service.py  text_utils.py  validators.py  workspace_service.py
clipart_ops/src/clipart_ops/ui/: dialogs.py  main_window.py  theme.py
clipart_ops/src/clipart_ops/workers/: task_runner.py
clipart_ops/tests/: test_bundle_service.py  test_metadata_and_csv.py  test_workspace_service.py
(+255 files in other folders)
